Working on payments to allow disbursement of multiple coins

--- a/default/config.json
+++ b/default/config.json
@@ -11,35 +11,14 @@
             "colors": true
         }
     },
-    "payments": {
-        "enabled": true,
-        "interval": 300,
-        "maxAddresses": 15,
-        "mixin": 1,
-        "priority": 0,
-        "transferFee": 15,
-        "dynamicTransferFee": true,
-        "minerPayFee" : true,
-        "minPayment": 10000,
-        "networkFee":0,
-        "minPaymentExchangeAddress":10000,
-        "maxTransactionAmount": 1000000,
-        "denomination": 100
-    },
-    "blockUnlocker": {
-        "enabled": true,
-        "interval": 600,
-        "depth": 60,
-        "reward":0
+    "web":{
+        "port":"8080"
     },
     "api": {
-        "enabled": true,
         "hashrateWindow": 600,
         "updateInterval": 10,
         "port": 8001,
         "bindIp":"0.0.0.0",
-        "blocks": 30,
-        "payments": 30,
         "password": "password",
         "ssl": {
             "enabled":false,
@@ -48,17 +27,17 @@
             "key": "./privkey.pem",
             "ca": "./chain.pem"
         },
+        "limit" : {
+            "blocks": 30,
+            "payments": 30
+        },
         "trustProxyIP": false
     },
-    "monitoring": {
-        "daemon": {
-            "checkInterval": 900,
-            "rpcMethod": "getblockcount"
-        },
-        "wallet": {
-            "checkInterval": 900,
-            "rpcMethod": "getbalance"
-        }
+    "redis": {
+        "host": "127.0.0.1",
+        "port": 6379,
+        "auth": null,
+        "db":1
     },
     "charts": {
         "blocks":{
@@ -66,7 +45,7 @@
             "days":30
         },
         "pool": {
-            "difficulty": {
+            "difficulty" : {
                 "enabled": true,
                 "updateInterval": 60,
                 "stepInterval": 1800,
