--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "pool": "node init.js --module=pool --coins=scala",
         "remote": "node init.js --module=remote",
         "test": "npx ava",
-        "unlocker": "node init.js --module=unlocker"
+        "unlocker": "node init.js --module=unlocker",
 	"web": "node init.js --module=web"
     }
 }
