--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "node": ">=14.0.0 <16.0.0"
     },
     "devDependencies": {
-        "ava": "^3.15.0"
+        "ava": "^3.15.0",
         "eslint": "^7.13.0",
         "eslint-config-standard": "^16.0.2",
         "eslint-plugin-html": "^6.1.1",
