--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "unlocker": "node init.js --module=unlocker",
         "web": "node init.js --module=web --port=80",
         "pooldev": "npx nodemon init.js -a '--module=pool' --watch lib --watch config",
+        "dev": "npx nodemon init.js --watch lib --watch config",
         "test": "npx ava",
         "lint": "npx semistandard lib/* --verbose | npx snazzy",
         "lint_md": "npx semistandard --plugin markdown '**/*.md' --verbose | npx snazzy",
